--- a/style.css
+++ b/style.css
@@ -40,6 +40,18 @@ button {
   box-shadow: 2px 2px black;
 }
 
+.score {
+  /*background: #4479BA;*/
+  color: #4479BA;
+  font-size: 30px;
+  text-align: center;
+  border: 1px solid black;
+  margin: 10px;
+  padding: 15px 25px;
+  border-radius: 10px;
+  box-shadow: 2px 2px black;
+}
+
 button:hover{
     background: #356094;
 }
@@ -64,6 +76,7 @@ button:hover{
   background-image: url("apples.jpg");
   border-radius: 20%;
   background-size: contain;
+  vertical-align:top;
 }
 
 #player1 .card{
@@ -75,6 +88,15 @@ section{
   padding 50px 0;
   max-width: 800px
   margin:0 auto
+}
+.nocard {
+  background-image: none;
+  background-color: white;
+  font-size: 200px;
+  font-weight:bolder;
+  text-align: center;
+
+  /*color: blue;*/
 }
 
 /*img{
