--- a/style.css
+++ b/style.css
@@ -19,8 +19,13 @@ body {
   font-family: "Josefin Slab";
 }
 h1 {
+  margin-top: 50px;
   font-size: 72px;
   text-align: center;
+  transition: color 1s;
+}
+h1:hover{
+  color:red;
 }
 
 
@@ -40,6 +45,11 @@ button {
   box-shadow: 2px 2px black;
 }
 
+.winner {
+  font-size: 40px;
+  font-weight:
+}
+
 .score {
   /*background: #4479BA;*/
   color: #4479BA;
@@ -52,12 +62,17 @@ button {
   box-shadow: 2px 2px black;
 }
 
+
+
 button:hover{
     background: #356094;
 }
 
 .board {
+  display:flex;
   text-align: center;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .card {
@@ -69,14 +84,19 @@ button:hover{
   padding: 15px 25px;
   border-radius: 10px;
   box-shadow: 2px 2px black;
-  height: 180px;
-  width: 106px;
+  height: 250px;
+  width: 170px;
   display: inline-block;
   margin:10px;
   background-image: url("apples.jpg");
   border-radius: 20%;
   background-size: contain;
   vertical-align:top;
+}
+
+.deck {
+  border: 0;
+  box-shadow: none;
 }
 
 #player1 .card{
@@ -89,12 +109,15 @@ section{
   max-width: 800px
   margin:0 auto
 }
-.nocard {
+.currentCard {
   background-image: none;
   background-color: white;
   font-size: 200px;
   font-weight:bolder;
   text-align: center;
+  height: 250px;
+  width: 170px;
+  line-height:280px;
 
   /*color: blue;*/
 }
