--- a/style.css
+++ b/style.css
@@ -29,22 +29,6 @@ h1:hover{
 }
 
 
-.play {
-  text-align: center;
-}
-
-button {
-  background: #4479BA;
-  color: #FFF;
-  font-size: 30px;
-  text-align: center;
-  border: 1px solid black;
-  margin: 10px;
-  padding: 15px 25px;
-  border-radius: 10px;
-  box-shadow: 2px 2px black;
-}
-
 .winner {
   font-size: 40px;
   font-weight:
@@ -60,12 +44,6 @@ button {
   padding: 15px 25px;
   border-radius: 10px;
   box-shadow: 2px 2px black;
-}
-
-
-
-button:hover{
-    background: #356094;
 }
 
 .board {
@@ -103,12 +81,23 @@ button:hover{
   background-color: blue;
 }
 
-section{
-  boarder: 2px dashed black:
-  padding 50px 0;
-  max-width: 800px
-  margin:0 auto
+.score {
+  /*background: #4479BA;*/
+  color: #4479BA;
+  font-size: 30px;
+  text-align: center;
+  border: 1px solid black;
+  margin: 10px;
+  padding: 15px 25px;
+  border-radius: 10px;
+  box-shadow: 2px 2px black;
 }
+
+.winner {
+  font-size: 40px;
+  font-weight:
+}
+
 .currentCard {
   background-image: none;
   background-color: white;
@@ -118,10 +107,4 @@ section{
   height: 250px;
   width: 170px;
   line-height:280px;
-
-  /*color: blue;*/
 }
-
-/*img{
-  border-radius:20px;/*<!--20px will round corners-->
-}*/
