--- a/style.css
+++ b/style.css
@@ -27,25 +27,6 @@ h1 {
 h1:hover{
   color:red;
 }
-
-
-.winner {
-  font-size: 40px;
-  font-weight:
-}
-
-.score {
-  /*background: #4479BA;*/
-  color: #4479BA;
-  font-size: 30px;
-  text-align: center;
-  border: 1px solid black;
-  margin: 10px;
-  padding: 15px 25px;
-  border-radius: 10px;
-  box-shadow: 2px 2px black;
-}
-
 .board {
   display:flex;
   text-align: center;
@@ -92,7 +73,7 @@ h1:hover{
 
 .winner {
   font-size: 40px;
-  font-weight:
+  font-weight: bolder;
 }
 
 .currentCard {
